# sensorhub-qt

./: .gitignore  CMakeLists.txt  README.md
src/: about_dialog.cpp  chart_widget.cpp  chart_widget.h  log_viewer.cpp  log_viewer.h  main.cpp  mainwindow.cpp  mainwindow.h  readings_table.cpp  readings_table.h  sensor_detail.cpp  sensor_detail.h  settings_dialog.cpp  settings_dialog.h  status_bar.cpp  status_bar.h
